# pygammon

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  app.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pygammon/: __init__.py  board.py  checker.py  cli.py  conf.py  controller.py  dice.py  game.py  pygammon.py  window.py
pygammon/ai/: model.py  player.py  train_selfplay.py  trainer.py
pygammon/boards/: board1.py  board2.py
pygammon/engine/: api.py  encoding.py
pygammon/logic/: dice.py  game.py  game_engine.py  models.py  move.py  position.py
pygammon/ui/: board.py  checker.py  dice.py  die.py  window.py
tests/: __init__.py  test_ai_model.py  test_api.py  test_checker_can_move.py  test_encoding.py  test_game_engine.py  test_has_winner.py  test_legal_moves.py  test_models.py  test_move_checker.py  test_pygammon.py  test_rules_audit.py  test_select.py  test_ui.py
