[project]
name = "pygammon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bpython>=0.26",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.0",
    "pyside6>=6.11.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[project.optional-dependencies]
ai = ["tensorflow>=2.21.0", "numpy>=2.4.4", "tensorboard>=2.20.0", "setuptools<83"]
